MPR#7640: revised implementation of Unix.execvpe, continued
Make sure tests/lib-unix/unix-execvpe is skipped under Win32.
Update the results of tests/tool-ocamlobjinfo which depend on the contents of the Unix library.

--- a/testsuite/tests/lib-unix/unix-execvpe/Makefile
+++ b/testsuite/tests/lib-unix/unix-execvpe/Makefile
@@ -4,12 +4,21 @@ ADD_COMPFLAGS=-I $(OTOPDIR)/otherlibs/$(UNIXLIBVAR)unix
 LD_PATH=$(TOPDIR)/otherlibs/$(UNIXLIBVAR)unix
 MAIN_MODULE=exec
 
-.PHONY: test
+include $(BASEDIR)/../config/Makefile
+
+ifeq ($(UNIX_OR_WIN32),unix)
+
 test:
 	@$(MAKE) compile
 	@$(SET_LD_PATH) $(MAKE) myrun
 
-.PHONY: myrun
+else
+
+skip:
+	@echo " ... testing => skipped (not on Unix)"
+
+endif
+
 myrun:
 	@printf " ... testing with"
 	@if $(NATIVECODE_ONLY); then : ; else \
